--- a/style.css
+++ b/style.css
@@ -3,34 +3,76 @@
 }
 
 body {
-    background-color: #22272E;
+    background-color: #1C2128;
 }
 
 nav {
+    float: left;
+    width: 17.5%;
+    height: 692px;
+    background-color: #22272E;
+    color: #ADBAC7;
+    padding: 0px 32px 0px 32px;
+    border: 1px solid #444C56;
+}
+
+nav ul {
+    list-style-type: none;
+    align-self: start;
+}
+
+a {
+    font-family: apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji";
+    font-size: 20px;
+    font-weight: 400;
+    line-height: 30px;
+    color: #539BF5;
+    text-decoration: none solid rgb(83, 155, 245);
+    display: inline;
+    cursor: pointer;
+}
+
+header {
+    box-sizing: border-box;
     display: flex;
+    height: 64px;
+    padding: 16px 32px 16px 32px;
     align-items: center;
     justify-content: center;
     background-color: #2D333B;
+    background-position: 0% 0%;
     color: #FFFFFF;
-    height: 64px;
+    text-decoration: none solid rgba(205, 217, 229, 0.7);
+    word-spacing: 0%;
+    z-index: 32;
+    border: 1px solid #444C56;
 }
 
-details {
+h1 {
+    font-family: apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji";
     font-size: 24px;
     line-height: 36px;
     position: relative;
-    margin-left: 2.5%;
+    margin-left: 12.5%;
     color: #ADBAC7;
 }
 
 ol {
-    position: relative;
-    margin-left: 2.5%;
     font-size: 18px;
+    position: relative;
+    margin-left: 15%;
+}
+
+li {
+    font-family: apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji";
+    font-size: 18px;
+    font-weight: 800;
+    line-height: 48px;
+    color: #ADBAC7;
 }
 
 .container {
-    margin-left: 12.5%;
+    margin-left: 15%;
     margin-right: 15%;
 }
 
