--- a/style.css
+++ b/style.css
@@ -88,6 +88,7 @@ li {
 }
 
 .container {
+    position: relative;
     margin-left: 15%;
     margin-right: 15%;
     margin-top: 64px;
@@ -96,4 +97,35 @@ li {
 .content {
     font-family: Tahoma, Arial, Helvetica, sans-serif;
     font: 2em sans-serif;
+}
+
+@media only screen and (max-width: 750px) {
+    header {
+        height: auto;
+        padding: 0, 0;
+        z-index: 1;
+    }
+    .sidenav {  
+        width: 100%;
+        height: auto;
+        position: absolute;
+        padding: 0, 0;
+        z-index: 0;
+    }
+
+    .container {
+        z-index: 0;
+        position: relative;
+        margin-left: 0%;
+        margin-right: 0%;
+        margin-top: 220px;
+        width: auto;
+    }
+    h1 {
+        margin-left: 0;
+        margin-right:0;
+    }
+    ol {
+        margin-left: 2.5%;
+    }
 }
