--- a/style.css
+++ b/style.css
@@ -13,16 +13,20 @@ header {
     align-items: center;
     justify-content: center;
     background-color: #2D333B;
-    background-position: 0% 0%;
-    color: #FFFFFF;
-    text-decoration: none solid rgba(205, 217, 229, 0.7);
-    z-index: 1;
+    z-index: 2;
     border: 1px solid #444C56;
     top: 0px;
     left: 0px;
     position: fixed;
     width: 100%;
     height: 64px;
+}
+
+header .content {
+    font-family: Tahoma, Arial, Helvetica, sans-serif;
+    font: 2em sans-serif;
+    color: #FFFFFF;
+    text-decoration: none solid rgba(205, 217, 229, 0.7);
 }
 
 .sidenav {
@@ -39,11 +43,12 @@ header {
 }
 
 .sidenav a {
-    padding: 6px 8px 6px 16px;
+    padding-left: 12px;
+    padding-top: 16px;
     text-decoration: underline solid rgb(83, 155, 245);
-    font-size: 21px;
-    font-weight: 600;
-    line-height: 35px;
+    font-size: 20px;
+    font-weight: 400;
+    line-height: 30px;
     color: #539BF5;
     display: block;
 }
@@ -53,40 +58,6 @@ header {
     text-decoration: underline solid #F1F1F1;
 }
 
-a {
-    font-family: apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji";
-    font-size: 20px;
-    font-weight: 400;
-    line-height: 30px;
-    color: #539BF5;
-    text-decoration: none solid rgb(83, 155, 245);
-    display: inline;
-    cursor: pointer;
-}
-
-h1 {
-    font-family: apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji";
-    font-size: 24px;
-    line-height: 36px;
-    position: relative;
-    margin-left: 12.5%;
-    color: #ADBAC7;
-}
-
-ol {
-    font-size: 18px;
-    position: relative;
-    margin-left: 15%;
-}
-
-li {
-    font-family: apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji";
-    font-size: 18px;
-    font-weight: 800;
-    line-height: 48px;
-    color: #ADBAC7;
-}
-
 .container {
     position: relative;
     margin-left: 15%;
@@ -94,9 +65,41 @@ li {
     margin-top: 64px;
 }
 
-.content {
-    font-family: Tahoma, Arial, Helvetica, sans-serif;
-    font: 2em sans-serif;
+.container h1 {
+    font-family: apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji";
+    font-size: 24px;
+    line-height: 36px;
+    position: relative;
+    margin-left: 10%;
+    color: #ADBAC7;
+}
+
+.container ol {
+    font-size: 18px;
+    position: relative;
+    margin-left: 11%;
+}
+
+.container ol li {
+    font-family: apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji";
+    font-size: 18px;
+    font-weight: 800;
+    line-height: 48px;
+    color: #ADBAC7;
+}
+
+@media (max-width: 1050px){
+    .container {
+        margin-right: 7.5%;
+    }
+
+    .sidenav {
+        width: 22.5%;
+    }
+
+    .sidenav a {
+        padding-left: 6px;
+    }
 }
 
 @media only screen and (max-width: 750px) {
@@ -114,6 +117,11 @@ li {
         padding: 0, 0;
         z-index: 0;
         top: 57px;
+    }
+
+    .sidenav a {
+        padding-top: 4px;
+        padding-bottom: 4px;
     }
 
     .container {
