--- a/style.css
+++ b/style.css
@@ -125,6 +125,7 @@ header .content {
         padding: 0, 0;
         z-index: 0;
         top: 57px;
+        margin-top: 0;
     }
 
     .sidenav a {
