--- a/style.css
+++ b/style.css
@@ -6,14 +6,10 @@ body {
     background-color: #1C2128;
 }
 
+/* Style for the Scrollbar */
 ::-webkit-scrollbar {
     width: 16px;
     border: 1px solid #424242;
-}
-
-::-webkit-scrollbar-button:single-button {
-    display: block;
-    background-color: #424242;
 }
   
 ::-webkit-scrollbar-track {
@@ -25,14 +21,15 @@ body {
     border: 1px solid #424242;
 }
 
+/* Style for the top header */
 header {
     box-sizing: border-box;
     display: flex;
     padding: 0 20px;
     align-items: center;
     justify-content: center;
-    background-color: #2D333B;
     z-index: 2;
+    background-color: #2D333B;
     border: 1px solid #444C56;
     top: 0px;
     left: 0px;
@@ -50,6 +47,7 @@ header .content a{
     margin-left: 12px;
 }
 
+/* Style the side navigation bar */
 .sidenav {
     font-family: apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji";
     font-weight: 400;
@@ -81,6 +79,37 @@ header .content a{
     text-decoration: underline solid #539BF5;
 }
 
+/* Style for Scroll-to-up Button */
+.arrow {
+    width: auto;
+    height: auto;
+    position: fixed;
+    bottom: 40px;
+    right: 40px;
+    z-index: 2;
+    background-color: #22272E;
+    border: 1px solid #444C56;
+}
+
+.arrow a {
+    color:#ADBAC7;
+    text-decoration: none solid #ADBAC7;
+    font-size: 20px;
+    font-weight: 400;
+    line-height: 30px;
+    padding-inline: 3px;
+}
+
+.arrow:hover {
+    background-color: #2D333B;
+}
+
+.arrow a:hover {
+    color: #539BF5;
+    text-decoration: underline solid #539BF5;
+}
+
+/* Style for the Main Content */
 .container {
     position: relative;
     margin-left: 15%;
@@ -116,6 +145,7 @@ header .content a{
     color: #ADBAC7;
 }
 
+/* Style change for tablets and small screen laptops*/
 @media (max-width: 1050px){
     .container {
         margin-right: 7.5%;
@@ -130,13 +160,18 @@ header .content a{
     }
 }
 
+/* Style change for mobile devices */
 @media only screen and (max-width: 750px) {
     header {
         width: 100%;
         height: auto;
         padding: 0, 0;
         z-index: 2;
-        font-size: 1em;
+    }
+
+    header .content a {
+        font-size: 1.5em;
+        margin-left: 6px;
     }
 
     ::-webkit-scrollbar {
