--- a/css/prism.css
+++ b/css/prism.css
@@ -1,42 +1,260 @@
 /* Style for Code blocks - GitHub Theme */
 
-code[class*=language-],pre[class*=language-]{color:#fff;background:0 0;font-family:ui-monospace,SFMono-Regular,"SF Mono",Menlo,Consolas,"Liberation Mono",monospace;font-size:12px;text-align:left;text-decoration:none solid rgb(173,186,199);white-space:pre;word-spacing:normal;word-break:normal;word-wrap:normal;line-height:20px;-moz-tab-size:4;-o-tab-size:4;tab-size:4;-webkit-hyphens:none;-moz-hyphens:none;-ms-hyphens:none;hyphens:none}
-:not(pre)>code[class*=language-],pre[class*=language-]{background:#22272E}
-pre[class*=language-]{border-radius:.5em;border:1px solid #444C56;margin: -1px -1px 0 -1px;overflow:auto;padding:1em}
-pre[class*=language-]::-moz-selection{background:#27292a}
-pre[class*=language-]::selection{background:#27292a}
-code[class*=language-] ::-moz-selection,code[class*=language-]::-moz-selection,pre[class*=language-] ::-moz-selection,pre[class*=language-]::-moz-selection{text-shadow:none;background:hsla(0,0%,93%,.15)}
-code[class*=language-] ::selection,code[class*=language-]::selection,pre[class*=language-] ::selection,pre[class*=language-]::selection{text-shadow:none;background:hsla(0,0%,93%,.15)}
-:not(pre)>code[class*=language-]{border-radius:.3em;border:1px solid #444C56;padding: 8px 8px 8px 16px;white-space:normal}
+code[class*=language-],
+pre[class*=language-] {
+    color: #fff;
+    background: 0 0;
+    font-family: ui-monospace, SFMono-Regular, "SF Mono", Menlo, Consolas, "Liberation Mono", monospace;
+    font-size: 12px;
+    text-align: left;
+    text-decoration: none solid rgb(173, 186, 199);
+    white-space: pre;
+    word-spacing: normal;
+    word-break: normal;
+    word-wrap: normal;
+    line-height: 20px;
+    -moz-tab-size: 4;
+    -o-tab-size: 4;
+    tab-size: 4;
+    -webkit-hyphens: none;
+    -moz-hyphens: none;
+    -ms-hyphens: none;
+    hyphens: none
+}
 
-.token.block-comment,.token.cdata,.token.comment,.token.doctype,.token.prolog{color:#999}
-.token.punctuation{color:#ccc}
-.token.attr-name,.token.deleted,.token.namespace,.token.tag{color:#e2777a}
-.token.function-name{color:#6196cc}
-.token.boolean,.token.function,.token.number{color:#f08d49}
-.token.class-name,.token.constant,.token.property,.token.symbol{color:#f8c555}
-.token.atrule,.token.builtin,.token.important,.token.keyword,.token.selector{color:#cc99cd}
-.token.attr-value,.token.char,.token.regex,.token.string,.token.variable{color:#7ec699}
-.token.entity,.token.operator,.token.url{color:#67cdcc}
-.token.bold,.token.important{font-weight:700}
-.token.italic{font-style:italic}
-.token.entity{cursor:help}
-.token.inserted{color:green}
+:not(pre)>code[class*=language-],
+pre[class*=language-] {
+    background: #22272E
+}
 
-.line-highlight.line-highlight{background:hsla(0,0%,33%,.25);background:linear-gradient(to right,hsla(0,0%,33%,.1) 70%,hsla(0,0%,33%,0));border-bottom:1px dashed #768390;border-top:1px dashed #768390;margin-top:.75em;z-index:0}
-.line-highlight.line-highlight:before,.line-highlight.line-highlight[data-end]:after{background-color:#8693a6;color:#f4f1ef}
-pre[class*=language-].line-numbers{position:relative;padding-left:3.8em;counter-reset:linenumber}
-pre[class*=language-].line-numbers>code{position:relative;white-space:inherit}
-.line-numbers .line-numbers-rows{position:absolute;pointer-events:none;top:0;font-size:100%;left:-3.8em;width:3em;letter-spacing:-1px;border-right:1px solid #999;-webkit-user-select:none;-moz-user-select:none;-ms-user-select:none;user-select:none}
-.line-numbers-rows>span{display:block;counter-increment:linenumber}
-.line-numbers-rows>span:before{content:counter(linenumber);color:#999;display:block;padding-right:.8em;text-align:right}
+pre[class*=language-] {
+    border-radius: .5em;
+    border: 1px solid #444C56;
+    margin: -1px -1px 0 -1px;
+    overflow: auto;
+    padding: 1em
+}
 
-div.code-toolbar{position:relative}
-div.code-toolbar>.toolbar{position:absolute;top:.3em;right:.2em;transition:opacity .3s ease-in-out;opacity:0}
-div.code-toolbar:hover>.toolbar{opacity:1}
-div.code-toolbar:focus-within>.toolbar{opacity:1}
-div.code-toolbar>.toolbar>.toolbar-item{display:inline-block}
-div.code-toolbar>.toolbar>.toolbar-item>a{cursor:pointer}
-div.code-toolbar>.toolbar>.toolbar-item>button{background:0 0;border:0;color:inherit;font:inherit;line-height:normal;overflow:visible;padding:0;user-select:none;-webkit-user-select:none;-moz-user-select:none;-ms-user-select:none}
-div.code-toolbar>.toolbar>.toolbar-item>a,div.code-toolbar>.toolbar>.toolbar-item>button,div.code-toolbar>.toolbar>.toolbar-item>span{color:#bbb;font-size:.8em;padding:0 .5em;background:#f5f2f0;background:rgba(224,224,224,.2);box-shadow:0 2px 0 0 rgba(0,0,0,.2);border-radius:.5em}
-div.code-toolbar>.toolbar>.toolbar-item>a:focus,div.code-toolbar>.toolbar>.toolbar-item>a:hover,div.code-toolbar>.toolbar>.toolbar-item>button:focus,div.code-toolbar>.toolbar>.toolbar-item>button:hover,div.code-toolbar>.toolbar>.toolbar-item>span:focus,div.code-toolbar>.toolbar>.toolbar-item>span:hover{color:inherit;text-decoration:none}
+pre[class*=language-]::-moz-selection {
+    background: #27292a
+}
+
+pre[class*=language-]::selection {
+    background: #27292a
+}
+
+code[class*=language-] ::-moz-selection,
+code[class*=language-]::-moz-selection,
+pre[class*=language-] ::-moz-selection,
+pre[class*=language-]::-moz-selection {
+    text-shadow: none;
+    background: hsla(0, 0%, 93%, .15)
+}
+
+code[class*=language-] ::selection,
+code[class*=language-]::selection,
+pre[class*=language-] ::selection,
+pre[class*=language-]::selection {
+    text-shadow: none;
+    background: hsla(0, 0%, 93%, .15)
+}
+
+:not(pre)>code[class*=language-] {
+    border-radius: .3em;
+    border: 1px solid #444C56;
+    padding: 8px 8px 8px 16px;
+    white-space: normal
+}
+
+.token.block-comment,
+.token.cdata,
+.token.comment,
+.token.doctype,
+.token.prolog {
+    color: #999
+}
+
+.token.punctuation {
+    color: #ccc
+}
+
+.token.attr-name,
+.token.deleted,
+.token.namespace,
+.token.tag {
+    color: #e2777a
+}
+
+.token.function-name {
+    color: #6196cc
+}
+
+.token.boolean,
+.token.function,
+.token.number {
+    color: #f08d49
+}
+
+.token.class-name,
+.token.constant,
+.token.property,
+.token.symbol {
+    color: #f8c555
+}
+
+.token.atrule,
+.token.builtin,
+.token.important,
+.token.keyword,
+.token.selector {
+    color: #cc99cd
+}
+
+.token.attr-value,
+.token.char,
+.token.regex,
+.token.string,
+.token.variable {
+    color: #7ec699
+}
+
+.token.entity,
+.token.operator,
+.token.url {
+    color: #67cdcc
+}
+
+.token.bold,
+.token.important {
+    font-weight: 700
+}
+
+.token.italic {
+    font-style: italic
+}
+
+.token.entity {
+    cursor: help
+}
+
+.token.inserted {
+    color: green
+}
+
+.line-highlight.line-highlight {
+    background: hsla(0, 0%, 33%, .25);
+    background: linear-gradient(to right, hsla(0, 0%, 33%, .1) 70%, hsla(0, 0%, 33%, 0));
+    border-bottom: 1px dashed #768390;
+    border-top: 1px dashed #768390;
+    margin-top: .75em;
+    z-index: 0
+}
+
+.line-highlight.line-highlight:before,
+.line-highlight.line-highlight[data-end]:after {
+    background-color: #8693a6;
+    color: #f4f1ef
+}
+
+pre[class*=language-].line-numbers {
+    position: relative;
+    padding-left: 3.8em;
+    counter-reset: linenumber
+}
+
+pre[class*=language-].line-numbers>code {
+    position: relative;
+    white-space: inherit
+}
+
+.line-numbers .line-numbers-rows {
+    position: absolute;
+    pointer-events: none;
+    top: 0;
+    font-size: 100%;
+    left: -3.8em;
+    width: 3em;
+    letter-spacing: -1px;
+    border-right: 1px solid #999;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none
+}
+
+.line-numbers-rows>span {
+    display: block;
+    counter-increment: linenumber
+}
+
+.line-numbers-rows>span:before {
+    content: counter(linenumber);
+    color: #999;
+    display: block;
+    padding-right: .8em;
+    text-align: right
+}
+
+div.code-toolbar {
+    position: relative
+}
+
+div.code-toolbar>.toolbar {
+    position: absolute;
+    top: .3em;
+    right: .2em;
+    transition: opacity .3s ease-in-out;
+    opacity: 0
+}
+
+div.code-toolbar:hover>.toolbar {
+    opacity: 1
+}
+
+div.code-toolbar:focus-within>.toolbar {
+    opacity: 1
+}
+
+div.code-toolbar>.toolbar>.toolbar-item {
+    display: inline-block
+}
+
+div.code-toolbar>.toolbar>.toolbar-item>a {
+    cursor: pointer
+}
+
+div.code-toolbar>.toolbar>.toolbar-item>button {
+    background: 0 0;
+    border: 0;
+    color: inherit;
+    font: inherit;
+    line-height: normal;
+    overflow: visible;
+    padding: 0;
+    user-select: none;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none
+}
+
+div.code-toolbar>.toolbar>.toolbar-item>a,
+div.code-toolbar>.toolbar>.toolbar-item>button,
+div.code-toolbar>.toolbar>.toolbar-item>span {
+    color: #bbb;
+    font-size: .8em;
+    padding: 0 .5em;
+    background: #f5f2f0;
+    background: rgba(224, 224, 224, .2);
+    box-shadow: 0 2px 0 0 rgba(0, 0, 0, .2);
+    border-radius: .5em
+}
+
+div.code-toolbar>.toolbar>.toolbar-item>a:focus,
+div.code-toolbar>.toolbar>.toolbar-item>a:hover,
+div.code-toolbar>.toolbar>.toolbar-item>button:focus,
+div.code-toolbar>.toolbar>.toolbar-item>button:hover,
+div.code-toolbar>.toolbar>.toolbar-item>span:focus,
+div.code-toolbar>.toolbar>.toolbar-item>span:hover {
+    color: inherit;
+    text-decoration: none
+}
